src/objects/PM_Project_Issue_History__c.object
<CustomObject>
    <fields>
        <fullName>PM_Project_Issue__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PM Project Issue</label>
        <referenceTo>PM_Project_Issue__c</referenceTo>
        <relationshipName>PM_Project_Issues_Hisotry</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PM_Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PM Project</label>
        <referenceTo>PM_Project__c</referenceTo>
        <relationshipName>PM_Project_Issues_Hisotry</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status_New_Value__c</fullName>
        <label>Status New Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Old_value__c</fullName>
        <label>Status Old value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>PM Project Issue History</label>
    <nameField>
        <label>PM Project Issue History Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PM Project Issues History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>